@@ -13,6 +13,7 @@ Core - General
   - cleanValues in Admin log and List Content.
   - #11198 - Fixes problem with cms_selflink with aliases that starts with a numeric sign.
   - Change new version check to timeout after 3 seconds..
+  - minor fix to the relative_time plugin.
 
 Content Manager v1.1.3
   - Fix bulk set-non-cachable functionality.
